--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-ale-py>=0.7.3
+# ale-py>=0.7.3
 # git+git://github.com/mila-iqia/atari-representation-learning.git
-AutoROM>=0.4.2
-AutoROM.accept-rom-license>=0.4.2
+# AutoROM>=0.4.2
+# AutoROM.accept-rom-license>=0.4.2
 bidict>=0.21.2
 depq>=1.5.5
 gym>=0.21.0
