--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Module",
+            "type": "python",
+            "request": "launch",
+            "module": "enter-your-module-name",
+            "justMyCode": true
+        },
+        {
+            "name": "Python: goal_agent",
+            "type": "python",
+            "request": "launch",
+            "module": "Experiments.GoalAgent.main",
+            "justMyCode": true
+        },
+        {
             "name": "Python: plane_game",
             "type": "python",
             "request": "launch",
@@ -13,6 +27,12 @@
             "type": "python",
             "request": "launch",
             "module": "Tests.test_IndexVar"
+        },
+        {
+            "name": "Python: test_Budget_decay",
+            "type": "python",
+            "request": "launch",
+            "module": "Tests.test_Budget_decay"
         },
         {
             "name": "Python: Pong",
