feat: :sparkles: Added an enhanced console "ConsolePlus"
1. It based on my private repository [PyNARS-Interface](https://github.com/ARCJ137442/PyNARS-Interface) for personal research
2. It includes a flexible, scalable and useful cmd system with capabilities including but not limited to:
  1. Automatically wait for ANSWER or other type of output
  2. Set random seeds
  3. Single console, multiple reasoners - you can control multiple NARS at the same time
  4. record and view history of input
  5. a simple macro system that can record and reuse cmd series

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -235,6 +235,20 @@
             ]
         },
         {
+            "name": "Python: console plus",
+            "type": "python",
+            "request": "launch",
+            "module": "pynars.ConsolePlus",
+            "console": "integratedTerminal",
+            "env": {
+                "CODON_PATH": "/Users/bowenxu/.codon/lib/codon/stdlib"
+            },
+            "args": [
+                // "Tests/examples/single_step/nal7/nal7.revrev.nal"
+                // "Tests/examples/single_step/nal5.query.nal"
+            ]
+        },
+        {
             "name": "Python: _generate_init_file",
             "type": "python",
             "request": "launch",
