feat: :sparkles: Added an "Explore Experiment" or "Ex-Console" to quickly performing feature experiment
It's also from my private repository "PyNARS-Interface"

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -249,6 +249,13 @@
             ]
         },
         {
+            "name": "Python: Console Experimental Features",
+            "type": "python",
+            "request": "launch",
+            "module": "Experiments.ExConsole.main",
+            "justMyCode": true
+        },
+        {
             "name": "Python: _generate_init_file",
             "type": "python",
             "request": "launch",
