style: :art: Align the code style into "lower camel case" (for names of variable and function)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -249,7 +249,7 @@
             ]
         },
         {
-            "name": "Python: Console Experimental Features",
+            "name": "Python: ex-console for experiments",
             "type": "python",
             "request": "launch",
             "module": "Experiments.ExConsole.main",
