--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ miniKanren>=1.0.3
 # GUI related packages
 qt-material>=2.14
 qtawesome>=1.2.3
-as-prc>=1.0.1
+as-rpc>=1.0.1
 qasync
 pyqtgraph
 PySide6
