--- a/.github/workflows/python-app-dev.yml
+++ b/.github/workflows/python-app-dev.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with unittest
       run: |
-        python -m unittest discover Tests/test_NAL/ -p "test_*.py" -v > output-dev.txt 2>&1
+        python -m unittest discover Tests/test_NAL/ -p "test_*.py" -v > output-dev.txt
 
     - uses: actions/upload-artifact@v4
       with:
