--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with unittest
       continue-on-error: true
       run: |
-        python -m unittest discover Tests/test_NAL/ -p "test_*.py" -v > output-pr.txt
+        python -m unittest discover Tests/test_NAL/ -p "test_*.py" -v |& tee output-pr.txt
     
     - name: Download workflow artifact
       uses: dawidd6/action-download-artifact@v3.0.0
