--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -48,9 +48,7 @@ jobs:
   
     - name: Compare test results
       run: |
-        ls
-        less output-pr.txt
-        diff -u ./test-report/output-dev.txt output-pr.txt | diff2html -i stdin -F test-diff.html
+        diff -u output-dev.txt output-pr.txt | diff2html -i stdin -F test-diff.html
     
     - uses: actions/upload-artifact@v4
       with:
