add step to comment on the pr

--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -55,4 +55,11 @@ jobs:
         name: test-diff
         path: ./test-diff.html
 
+    - name: Comment PR with execution number
+      uses: thollander/actions-comment-pull-request@v2
+      with:
+        message: |
+          _(execution **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_
+        comment_tag: execution
+
 
