--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: read
+  pull-requests: write 
 
 jobs:
   build:
@@ -56,7 +57,7 @@ jobs:
         path: ./test-diff.html
 
     - name: Comment PR with execution number
-      uses: thollander/actions-comment-pull-request@v2
+      uses: thollander/actions-comment-pull-request@v2.4.3
       with:
         message: |
           _(execution **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_
