--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -44,8 +44,11 @@ jobs:
     - name: Extract number of failures and errors
       id: extract_results
       run: |
-        echo "test_dev=$(tail -2 ../output-dev.txt | head -1)" >> "$GITHUB_ENV"
-        echo "test_pr=$(tail -2 ../output-pr.txt | head -1)" >> "$GITHUB_ENV"
+        echo "test_dev=$(tail -2 output-dev.txt | head -1)" >> "$GITHUB_ENV"
+        echo "test_pr=$(tail -2 output-pr.txt | head -1)" >> "$GITHUB_ENV"
+        echo 'test_results<<EOF'
+        diff -u output-dev.txt output-pr.txt
+        echo EOF
     
     - name: Setup Node (for diff)
       uses: actions/setup-node@v4
@@ -56,18 +59,22 @@ jobs:
     - name: Compare test results
       run: |
         diff -u output-dev.txt output-pr.txt | diff2html -i stdin -F test-diff.html
+        echo "```diff" >> $GITHUB_STEP_SUMMARY
+        echo "$test_results" >> $GITHUB_STEP_SUMMARY
+        echo "```" >> $GITHUB_STEP_SUMMARY
     
     - uses: actions/upload-artifact@v4
       with:
         name: test-diff
         path: ./test-diff.html
 
-    - name: Comment PR with execution number
+    - name: Comment on the PR
       uses: thollander/actions-comment-pull-request@v2.4.3
       with:
         message: |
           Test results from DEV: "$test_dev"
           Test results from PR:  "$test_pr"
+          $GITHUB_STEP_SUMMARY
         comment_tag: execution
 
 
