--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -50,7 +50,7 @@ jobs:
           echo "test_results<<EOF"
           diff -u output-dev.txt output-pr.txt
           echo EOF
-        }
+        } >> "$GITHUB_ENV"
     
     - name: Setup Node (for diff)
       uses: actions/setup-node@v4
@@ -74,8 +74,8 @@ jobs:
       uses: thollander/actions-comment-pull-request@v2.4.3
       with:
         message: |
-          Test results from DEV: "$test_dev"
-          Test results from PR:  "$test_pr"
+          Test results from DEV: $test_dev
+          Test results from PR:  $test_pr
           $GITHUB_STEP_SUMMARY
         comment_tag: execution
 
