--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -41,13 +41,17 @@ jobs:
         workflow: python-app-dev.yml
         name: test-report
         
+    - name: Print diff
+      run: |
+        diff -u output-dev.txt output-pr.txt
+        
     - name: Extract number of failures and errors
       id: extract_results
       run: |
         {
-          echo 'test_results<<EOOOF'
+          echo 'test_results<<EOF'
           diff -u output-dev.txt output-pr.txt
-          echo EOOOF
+          echo EOF
         } >> "$GITHUB_ENV"
     
     - name: Setup Node (for diff)
@@ -72,6 +76,8 @@ jobs:
       uses: thollander/actions-comment-pull-request@v2.4.3
       with:
         message: |
+          Test results from DEV: $test_dev
+          Test results from PR:  $test_pr
           $GITHUB_STEP_SUMMARY
         comment_tag: execution
 
