--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -41,16 +41,12 @@ jobs:
         workflow: python-app-dev.yml
         name: test-report
         
-    - name: Print diff
-      run: |
-        diff -u output-dev.txt output-pr.txt
-        
     - name: Extract number of failures and errors
       id: extract_results
       run: |
         {
           echo 'test_results<<EOF'
-          diff -u output-dev.txt output-pr.txt
+          diff -u output-dev.txt output-pr.txt || true
           echo EOF
         } >> "$GITHUB_ENV"
     
