--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -56,12 +56,15 @@ jobs:
         node-version: 20
     - run: npm install -g diff2html-cli
   
-    - name: Compare test results
-      run: |
-        diff -u output-dev.txt output-pr.txt | diff2html -i stdin -F test-diff.html
-        echo "```diff" >> $GITHUB_STEP_SUMMARY
-        echo "$test_results" >> $GITHUB_STEP_SUMMARY
-        echo "```" >> $GITHUB_STEP_SUMMARY
+    # - name: Compare test results
+    #   run: |
+    #     diff -u output-dev.txt output-pr.txt | diff2html -i stdin -F test-diff.html
+    #     echo "```diff" >> $GITHUB_STEP_SUMMARY
+    #     echo "$test_results" >> $GITHUB_STEP_SUMMARY
+    #     echo "```" >> $GITHUB_STEP_SUMMARY
+
+    - name: Adding markdown
+      run: echo '### Hello world! 🚀' >> $GITHUB_STEP_SUMMARY
     
     - uses: actions/upload-artifact@v4
       with:
@@ -74,7 +77,6 @@ jobs:
         message: |
           Test results from DEV: $test_dev
           Test results from PR:  $test_pr
-          $GITHUB_STEP_SUMMARY
         comment_tag: execution
 
 
