--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -44,22 +44,18 @@ jobs:
     - name: Extract number of failures and errors
       id: extract_results
       run: |
+        tr '\r' '\n' < output-dev.txt > old.txt
+        tr '\r' '\n' < output-pr.txt > new.txt
+        tail -n +53 old.txt
+        tail -n +53 new.txt
+
         {
-          echo "test_results<<EOF"
-          diff -u output-dev.txt output-pr.txt || true
+          echo "TEST_RESULTS<<EOF"
+          diff -u old.txt new.txt || true
           echo EOF
         } >> "$GITHUB_ENV"
-    
-    - name: Setup Node (for diff)
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-    - run: npm install -g diff2html-cli
-  
-    - name: Compare test results
-      run: |
-        diff -u output-dev.txt output-pr.txt | diff2html -i stdin -F test-diff.html
-        printf '%s\n' "\`\`\`diff\n$test_results\n\`\`\`" >> $GITHUB_STEP_SUMMARY
+
+        printf '%s\n' "\`\`\`diff\n$TEST_RESULTS\n\`\`\`" >> $GITHUB_STEP_SUMMARY
     
     - uses: actions/upload-artifact@v4
       with:
@@ -69,9 +65,7 @@ jobs:
     - name: Comment on the PR
       uses: thollander/actions-comment-pull-request@v2.4.3
       with:
-        message: |
-          Test results from DEV: $test_dev
-          Test results from PR:  $test_pr
+        message: ${{ env.TEST_RESULTS }}
         comment_tag: execution
 
 
