testing github step summary

--- a/.github/workflows/python-app-pr.yml
+++ b/.github/workflows/python-app-pr.yml
@@ -47,8 +47,8 @@ jobs:
         tr '\r' '\n' < output-pr.txt > new.txt
         tail -n +53 old.txt > tmp.txt && mv tmp.txt old.txt
         tail -n +53 new.txt > tmp.txt && mv tmp.txt new.txt
-        sed -n '/=============/q;p' old.txt
-        sed -n '/=============/q;p' new.txt
+        sed -i -n '/======================================================================/q;p' old.txt
+        sed -i -n '/======================================================================/q;p' new.txt
         {
           echo "TEST_RESULTS<<EOF"
           diff -u old.txt new.txt || true
