--- a/pynars/NARS/InferenceEngine/KanrenEngine/nal-rules.yml
+++ b/pynars/NARS/InferenceEngine/KanrenEngine/nal-rules.yml
@@ -103,6 +103,7 @@ rules:
 
   immediate: |
     S |- (--, S) .neg
+    (--, S) |- S .neg
     <S --> P> |- <P --> S> .cnv
     <S ==> P> |- <P ==> S> .cnv
     <S ==> P> |- <(--, P) ==> (--, S)> .cnt
