--- a/pynars/NARS/InferenceEngine/KanrenEngine/nal-rules.yml
+++ b/pynars/NARS/InferenceEngine/KanrenEngine/nal-rules.yml
@@ -210,6 +210,8 @@ theorems: |
   <<T2 --> (/, R, T1, _)> <=> <(T1 * T2) --> R>>
   <<R --> (T1 * T2)> <=> <(\, R, _, T2) --> T1>>
   <<R --> (T1 * T2)> <=> <(\, R, T1, _) --> T2>>
+  <<(\, R, _, T2) --> T1> <=> <R --> (T1 * T2)>>
+  <<(\, R, T1, _) --> T2> <=> <R --> (T1 * T2)>>
 
   <<S1 ==> <S2 ==> S3>> <=> <(S1 && S2) ==> S3>>
 
@@ -226,6 +228,11 @@ theorems: |
   <<T2 --> (/, R, T1, _)> <=> <T1 --> (/, R, _, T2)>>
   <<T1 --> (\, R, _, T2)> <=> <T2 --> (\, R, T1, _)>>
   <<T2 --> (\, R, T1, _)> <=> <T1 --> (\, R, _, T2)>>
+  # 'inverse of the above 
+  <<(/, R, _, T2) --> T1> <=> <(/, R, T1, _) --> T2>>
+  <<(/, R, T1, _) --> T2> <=> <(/, R, _, T2) --> T1>>
+  <<(\, R, _, T2) --> T1> <=> <(\, R, T1, _) --> T2>>
+  <<(\, R, T1, _) --> T2> <=> <(\, R, _, T2) --> T1>>
 
   <(&/, S1, N1, S2) <=> <S2 =\> (&/, S1, N1)>>
   <(&/, S1, N1, S2) <=> <S1 =/> S2>>
