--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,184 +9,190 @@
         },
         {
             "name": "Python: pynars.GUI",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "pynars.GUI",
             "justMyCode": true
         },
         {
             "name": "Python: goal_agent",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Experiments.GoalAgent.main",
             "justMyCode": true
         },
         {
             "name": "Python: plane_game",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Experiments.FighterPlane.plane_game",
             "justMyCode": true
         },
         {
             "name": "Python: test_indexvar",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_IndexVar"
         },
         {
             "name": "Python: test_Budget_decay",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Budget_decay"
         },
         {
             "name": "Python: Pong",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
-            "module": "pynars.RL.Pong.main"
+            "module": "Experiments.Pong.main"
+        },
+        {
+            "name": "Python: Pong 2",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "Experiments.Pong.main2"
         },
         {
             "name": "Python: test_nal9",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL9"
         },
         {
             "name": "Python: test_nal8",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL8"
         },
         {
             "name": "Python: test_nal7",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL7"
         },
         {
             "name": "Python: test_nal6",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL6"
         },
         {
             "name": "Python: test_nal5",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL5"
         },
         {
             "name": "Python: test_nal4",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL4"
         },
         {
             "name": "Python: test_nal3",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL3"
         },
         {
             "name": "Python: test_nal2",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL2"
         },
         {
             "name": "Python: test_nal1",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_NAL.test_NAL1"
         },
         {
             "name": "Python: test_rule_lut",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_RuleMap.test_RuleLUT"
         },
         {
             "name": "Python: test_term_equal",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Term_Equal"
         },
         {
             "name": "Python: test_terms",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_variable.test_Terms"
         },
         {
             "name": "Python: test_substitution",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_variable.test_Substitution"
         },
         {
             "name": "Python: test_variable",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Variable"
         },
         {
             "name": "Python: test_compound",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Compound"
         },
         {
             "name": "Python: test_inference_engine",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_InferenceEngine"
         },
         {
             "name": "Python: test_link",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Link"
         },
         {
             "name": "Python: test_table",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Table"
         },
         {
             "name": "Python: test_memory",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Memory"
         },
         {
             "name": "Python: test_evidential_base",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_EvidentialBase"
         },
         {
             "name": "Python: test_rulemap",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_RuleMap"
         },
         {
             "name": "Python: test_rulemap_v2",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_RuleMap.test_RuleMap_v2"
         },
         {
             "name": "Python: test_examples",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Examples"
         },
         {
             "name": "Python: test_copula",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Copula"
         },
@@ -198,37 +204,37 @@
         // },
         {
             "name": "Python: test_bag",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Bag"
         },
         {
             "name": "Python: test_sparse_lut",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_RuleMap.test_sparse_lut"
         },
         {
             "name": "Python: test_parser",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_Parser"
         },
         {
             "name": "Python: test_color",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_color"
         },
         {
             "name": "Python: test_parse_examples",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Tests.test_ParseExamples"
         },
         {
             "name": "Python: console",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "pynars.Console",
             "console": "integratedTerminal",
@@ -242,7 +248,7 @@
         },
         {
             "name": "Python: console plus",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "pynars.ConsolePlus",
             "console": "integratedTerminal",
@@ -256,26 +262,26 @@
         },
         {
             "name": "Python: ex-console for experiments",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Experiments.ExConsole.main",
             "justMyCode": true
         },
         {
             "name": "Python: _generate_init_file",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "pynars.NAL._generate_init_file"
         },
         {
             "name": "Python: Parser test",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "Narsese.Parser._test"
         },
         {
             "name": "Python: Current File",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
